# ai-gym-tower-defense

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.pt  pyproject.toml
ai_gym_td/: __init__.py  agents.py  config.py  engine.py  env.py  gym_register.py  llm_agents.py  obs_format.py  pathfinding.py  ppo.py  render.py  viewer.py
ai_gym_td/scripts/: __init__.py  evaluate.py  play.py  train.py
benchmark_results/: benchmark_20260520_100339.json
examples/: quickstart.py  tournament.py
scripts/: benchmark.py  plot_results.py  visualize.py
tests/: test_smoke.py
